Telephony(MSIM): MultiSim support for PIN/PUK & Operator Name.
-> Add CarrierText, SimPinView and SimPukView classes for MSIM.
-> Add support to Display Multiple operator name.
-> Add Support for Multiple PIN/PUK Lock screens.
-> Overload few Keyguard methods to take sub info.

Change-Id: I500129a5dc09adcb2cd8eb664d30ae2e8bad2642

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1394,6 +1394,7 @@
   <java-symbol type="id" name="multi_pane_challenge" />
   <java-symbol type="id" name="keyguard_user_selector" />
   <java-symbol type="id" name="key_enter" />
+  <java-symbol type="id" name="key_cancel" />
   <java-symbol type="id" name="keyguard_selector_view_frame" />
   <java-symbol type="id" name="targets" />
   <java-symbol type="integer" name="config_carDockRotation" />
@@ -1921,7 +1922,32 @@
   <java-symbol type="drawable" name="ic_lockscreen_sms" />
   <java-symbol type="drawable" name="ic_lockscreen_twitter" />
 
-  <!-- Extra -->
+  <!-- From Chromium-WebView -->
+  <java-symbol type="attr" name="actionModeWebSearchDrawable" />
+  <java-symbol type="string" name="websearch" />
+
+  <!-- Multi SIM related -->
+  <java-symbol type="string" name="msim_kg_sim_pin_msg_format" />
+  <java-symbol type="string" name="msim_carrier_text_format" />
+
+  <java-symbol type="id" name="msim_keyguard_sim_pin_view" />
+  <java-symbol type="id" name="msim_keyguard_sim_puk_view" />
+  <java-symbol type="id" name="msim_keyguard_carrier_area" />
+  <java-symbol type="id" name="stub_msim_carrier_text" />
+
+  <java-symbol type="layout" name="msim_keyguard_sim_pin_view" />
+  <java-symbol type="layout" name="msim_keyguard_sim_puk_view" />
+  <java-symbol type="layout" name="msim_keyguard_carrier_area" />
+
+<!-- ===============================================================
+   Resources added in version 10 of CyanogenMod
+   =============================================================== -->
+  <eat-comment />
+
+  <!-- Config.xml entries -->
+  <java-symbol type="bool" name="config_forceDisableHardwareKeyboard" />
+  <java-symbol type="bool" name="config_hasRotationLockSwitch" />
+  <java-symbol type="bool" name="config_show_cmIMESwitcher"/>
   <java-symbol type="integer" name="config_wallpaperMaxWidth" />
   <java-symbol type="bool" name="config_hasDockBattery" />
   <java-symbol type="bool" name="config_hasRemovableLid" />
