Support GESTURE_SENSOR input device type with GestureService
* The GESTURE_SENSOR input device type is meant to support touch sensors
  which are meant for gesture input only, very similar to a touchpad,
  but without the pointer capability.
* Define separate service to handle gestures from GESTURE_SENSOR device
  type.

Change-Id: I9b273df2a3cc141774d7f7cd81e43a90ea5b230b

--- a/core/res/res/values/dimens.xml
+++ b/core/res/res/values/dimens.xml
@@ -354,4 +354,7 @@
 
     <!-- Top margin for overflow notifications shown in the P.O.R.N. view -->
     <dimen name="glowpad_overflow_notifications_margin_top">48dp</dimen>  
+
+    <!-- Dummy dimen to fix build -->
+    <dimen name="pie_trigger_thickness">10dp</dimen>
 </resources>
