--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2128,4 +2128,18 @@
   <java-symbol type="anim" name="slide_in_left_no_fade" />
   <java-symbol type="anim" name="slide_out_right_no_fade" />
 
+  <!-- Keyguard random NumPadKeys -->
+  <java-symbol type="string" name="keyboardview_keycode_random" />
+  <java-symbol type="id" name="key_random" />
+  <java-symbol type="id" name="key0" />
+  <java-symbol type="id" name="key1" />
+  <java-symbol type="id" name="key2" />
+  <java-symbol type="id" name="key3" />
+  <java-symbol type="id" name="key4" />
+  <java-symbol type="id" name="key5" />
+  <java-symbol type="id" name="key6" />
+  <java-symbol type="id" name="key7" />
+  <java-symbol type="id" name="key8" />
+  <java-symbol type="id" name="key9" /> 
+
 </resources>
