qs: Add torch and GPS tiles by default if supported
 * New configuration variable config_enableTorch has been moved from
   the settings app that devices should overlay onto.

Change-Id: I2e4cb81390548cf055eae2836280fe9bdc65f0b0

Conflicts:
	core/java/com/android/internal/util/cm/QSUtils.java
	core/res/res/values/config.xml
	core/res/res/values/symbols.xml

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2086,6 +2086,9 @@
   <!-- Package Manager -->
   <java-symbol type="array" name="config_disabledComponents" />
 
+  <!-- LED flashlight -->
+  <java-symbol type="bool" name="config_enableTorch" /> 
+
   <!--  Animations -->
   <java-symbol type="string" name="animation_fade"/>
   <java-symbol type="string" name="animation_slide_left"/>
