--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1304,9 +1304,8 @@
     <string-array name="config_disabledComponents" translatable="false">
     </string-array> 
 
-    <!-- The list of components which should be automatically disabled. -->
-    <string-array name="config_disabledComponents" translatable="false">
-    </string-array>  
+    <!-- Device supports LED flashlight -->
+    <bool name="config_enableTorch">false</bool>   
 
     <!-- empty string to disable, or eg: /sys/kernel/fast_charge/force_fast_charge
          for a custom path the delivered kernel supports.
