--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1999,4 +1999,9 @@
   <java-symbol type="id" name="key8" />
   <java-symbol type="id" name="key9" /> 
 
+  <!-- LED flashlight -->
+  <java-symbol type="bool" name="config_enableTorch" />
+
+  <!-- SMS RIL_REQUEST_SEND_SMS_EXPECT_MORE -->
+  <java-symbol type="bool" name="config_smsUseExpectMore" />
 </resources>
