Add PowerMenu QuickSettings Toggle (1/2)
Change-Id: I01716889dfe93091f5c05d6c9ed00c11d442a235

--- a/packages/SystemUI/res/values/cr_strings.xml
+++ b/packages/SystemUI/res/values/cr_strings.xml
@@ -7,4 +7,7 @@
     <!-- [CHAR LIMIT=10] Running services, summary of foreground processes -->
     <string name="service_used_mem"><xliff:g id="memory">%1$s</xliff:g> used</string>
 
+    <!-- Power menu -->
+    <string name="quick_settings_powermenu_label">Power Menu</string> 
+
 </resources>
