--- a/packages/SystemUI/res/layout/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout/status_bar_recent_panel.xml
@@ -25,113 +25,98 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     systemui:recentItemLayout="@layout/status_bar_recent_item"
+    android:fitsSystemWindows="true"
     >
-    <View
-        android:id="@+id/recents_transition_background"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:visibility="invisible" />
-
-    <FrameLayout
-        android:id="@+id/recents_bg_protect"
-        android:background="@drawable/status_bar_recents_background"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true">
-
-        <ImageView
-            android:id="@+id/recents_transition_placeholder_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible" />
-
-        <com.android.systemui.recent.RecentsVerticalScrollView
-            android:id="@+id/recents_container"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
-            android:divider="@null"
-            android:stackFromBottom="true"
-            android:fadingEdge="vertical"
-            android:scrollbars="none"
-            android:fadingEdgeLength="@dimen/status_bar_recents_scroll_fading_edge_length"
-            android:layout_gravity="bottom|start"
-            android:clipToPadding="false"
-            android:clipChildren="false"
-            android:fitsSystemWindows="true">
+            android:layout_height="match_parent"
+            android:background="@drawable/status_bar_recents_background"
+            android:orientation="vertical">
 
-            <LinearLayout android:id="@+id/recents_linear_layout"
+            <view class="com.android.systemui.recent.LinearColorBar"
+                android:id="@+id/ram_usage_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_marginTop="-5dp"
+                android:orientation="horizontal"
+                android:clipChildren="false"
                 android:clipToPadding="false"
-                android:clipChildren="false">
-            </LinearLayout>
+                android:paddingTop="10dp"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:layout_marginLeft="@*android:dimen/preference_fragment_padding_side"
+                android:layout_marginRight="@*android:dimen/preference_fragment_padding_side">
+                <TextView
+                    android:id="@+id/usedMemText"
+                    android:layout_width="0px"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:focusable="true"
+                    android:gravity="left|bottom"
+                    android:textAppearance="?android:attr/textAppearanceSmallInverse"
+                    android:textColor="#000"
+                    android:singleLine="true" />
+                <TextView
+                    android:id="@+id/ramText"
+                    android:layout_width="0px"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:textAppearance="?android:attr/textAppearanceSmallInverse"
+                    android:textColor="#000"
+                    android:singleLine="true" />
+                <TextView
+                    android:id="@+id/freeMemText"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_width="0px"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:focusable="true"
+                    android:gravity="right|bottom"
+                    android:textAppearance="?android:attr/textAppearanceSmallInverse"
+                    android:textColor="#000"
+                    android:singleLine="true" />
+            </view>
 
-        </com.android.systemui.recent.RecentsVerticalScrollView>
+            <FrameLayout
+                android:id="@+id/recents_bg_protect"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true">
 
-    </FrameLayout>
+                <com.android.systemui.recent.RecentsVerticalScrollView
+                    android:id="@+id/recents_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="0dp"
+                    android:divider="@null"
+                    android:stackFromBottom="true"
+                    android:fadingEdge="vertical"
+                    android:scrollbars="none"
+                    android:fadingEdgeLength="@dimen/status_bar_recents_scroll_fading_edge_length"
+                    android:layout_gravity="bottom|start"
+                    android:clipToPadding="false"
+                    android:clipChildren="false">
 
-    <include layout="@layout/status_bar_no_recent_apps"
-        android:id="@+id/recents_no_apps"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible" />
+                    <LinearLayout android:id="@+id/recents_linear_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:clipToPadding="false"
+                        android:clipChildren="false">
+                    </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/recents_ram_bar"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom"
-        android:layout_gravity="bottom">
+                </com.android.systemui.recent.RecentsVerticalScrollView>
 
-        <view class="com.android.systemui.recent.LinearColorBar"
-            android:id="@+id/ram_usage_bar"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-5dp"
-            android:orientation="horizontal"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            android:paddingTop="30dp"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:paddingBottom="1dp">
+                <include layout="@layout/status_bar_no_recent_apps"
+                    android:id="@+id/recents_no_apps"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:visibility="invisible" />
 
-            <TextView
-                android:id="@+id/usedMemText"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:focusable="true"
-                android:gravity="left|bottom"
-                android:textAppearance="?android:attr/textAppearanceSmallInverse"
-                android:textColor="#000"
-                android:singleLine="true" />
+        </FrameLayout>
 
-            <TextView
-                android:id="@+id/ramText"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:focusable="true"
-                android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceSmallInverse"
-                android:textColor="#000"
-                android:singleLine="true" />
-
-            <TextView
-                android:id="@+id/freeMemText"
-                android:layout_gravity="center_vertical|right"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:focusable="true"
-                android:gravity="right|bottom"
-                android:textAppearance="?android:attr/textAppearanceSmallInverse"
-                android:textColor="#000"
-                android:singleLine="true" />
-        </view>
-    </RelativeLayout>
-
+    </LinearLayout>
 </com.android.systemui.recent.RecentsPanelView>
