--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -239,5 +239,8 @@
     <dimen name="ad_date_font_size">18dp</dimen>
 
     <!-- AM/PM size in active display -->
-    <dimen name="ad_ampm_font_size">32dp</dimen>   
+    <dimen name="ad_ampm_font_size">32dp</dimen>
+
+    <!-- Network stats text size -->
+    <dimen name="network_stats_text_size">10dp</dimen>   
 </resources>
